# MCHClustering

./: .gitignore  CMakeLists.txt  README.md  environment.yml
src/: CMakeLists.txt  Play with pads.ipynb  conanfile.txt
src/Analyses/: analyseToolKit.py  clusterSize.py  eventStats.py  inspectCluster.py  inspectClusterFig.py  inspectClusterFigJDL2022.py  inspectPETCluster.py  notes.txt  opt.txt  perfStat.py  pieChart.py  residuals.py  residualsLocation.py  run3Analyse.py  seeds.py  skeleton.cxx
src/C/: PyCWrapper.py  PyCWrapper.py.in  clusterProcessing-v1.cpp  clusterProcessing-v1.sat.cpp  clusterProcessing-v2.cpp  clusterProcessing.cpp  clusterProcessing.h  compil.sh  dataStructure.cpp  dataStructure.h  gaussianEM.cpp  gaussianEM.h  gaussianEM.sat.cpp  mathUtil.cpp  mathUtil.h  mathieson.cpp  mathieson.h  mathiesonFit.cpp  mathiesonFit.h  mathiesonFit.sat.cpp  notes.txt  padProcessing.cpp  padProcessing.h  padProcessing.sat.cpp
src/Doc/: implementation.tex
src/LaplacianProj/: PyCWrapper.py  compil.sh
src/Macros/: CompareClustersMC.C  GetClustersMC.C  GetMCData.C  GetMCData.fake.C  GetPreClusters.C  RunAliRootPreClusterizer.C  WriteMCClusters.C  WriteMCInfo.C  WriteRecInfo.C
src/O2_Clustering/: PyCWrapper.py  compil-PEM.sh  compil.sh
src/PyTests/: EstimationRun2.ods  IC95_t.py  assignGroupToCathPads_t.py  cij_idx_t.py  clusterProcessOnMCData_t.py  clusterProcessOnRun2_t.py  clusterProcess_t.py  connectComponents_t.py  criterionStudy_t.py  fittingWithGaussian_t.py  gaussianEM_t.py  inspectEvents_t.py  inspectTracks_t.py  localMax_t.py  mathiesonFit_t.py  (+12 more)
(+85 files in other folders)
